force-app/main/default/objects/WorkOrder/fields/AtaDependenciaFinalizada__c.field-meta.xml
<CustomField>
    <fullName>AtaDependenciaFinalizada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ata de Dependência Finalizada</label>
    <type>Checkbox</type>
</CustomField>