force-app/main/default/objects/WorkOrder/fields/Corretora__c.field-meta.xml
<CustomField>
    <fullName>Corretora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corretora</label>
    <referenceTo>Corretora__c</referenceTo>
    <relationshipLabel>Agendamentos</relationshipLabel>
    <relationshipName>Agendamentos</relationshipName>
    <type>Lookup</type>
</CustomField>