force-app/main/default/objects/WorkOrder/fields/EmailsInteressados__c.field-meta.xml
<CustomField>
    <fullName>EmailsInteressados__c</fullName>
    <label>Emails Interessados</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>