force-app/main/default/objects/WorkOrder/fields/LeadCriadoCallCenter__c.field-meta.xml
<CustomField>
    <fullName>LeadCriadoCallCenter__c</fullName>
    <formula>CONTAINS(Lead__r.CreatedBy.FirstName, &apos;AEC&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead criado pelo Call Center</label>
    <type>Checkbox</type>
</CustomField>