force-app/main/default/objects/WorkOrder/fields/ObservacoesSR__c.field-meta.xml
<CustomField>
    <fullName>ObservacoesSR__c</fullName>
    <label>ObservaçõesSR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>