force-app/main/default/objects/WorkOrder/fields/PAPEL_DO_CRIADOR__c.field-meta.xml
<CustomField>
    <fullName>PAPEL_DO_CRIADOR__c</fullName>
    <formula>ParentWorkOrder.CreatedBy.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PAPEL DO CRIADOR</label>
    <type>Text</type>
</CustomField>