force-app/main/default/objects/WorkOrder/fields/StatusLead__c.field-meta.xml
<CustomField>
    <fullName>StatusLead__c</fullName>
    <formula>TEXT(Lead__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status do Lead</label>
    <type>Text</type>
</CustomField>